# ..sort-of-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/reasoning_engine_pro/: __init__.py  config.py  main.py
src/reasoning_engine_pro/agents/: __init__.py  few_shot.py  job_name.py  orchestrator.py  planner.py  referencing.py  summarizer.py  validator.py
src/reasoning_engine_pro/agents/preprocessors/: __init__.py  factory.py  inline_refinement.py  passthrough.py  (+1 more)
src/reasoning_engine_pro/api/: __init__.py  app.py  dependencies.py
src/reasoning_engine_pro/core/: __init__.py  enums.py  error_mapper.py  exceptions.py
src/reasoning_engine_pro/llm/: __init__.py  factory.py
src/reasoning_engine_pro/observability/: __init__.py  logger.py  tracing.py
src/reasoning_engine_pro/services/: __init__.py
src/reasoning_engine_pro/tools/: __init__.py  definitions.py  factory.py  registry.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_responses.py  sample_workflows.py
tests/integration/: test_redis_storage.py  test_websocket.py
tests/unit/: test_block_templates.py  test_error_mapper.py  test_integrated_search.py  test_llm_providers.py  test_orchestrator.py  test_output_tools.py  test_query_preprocessors.py  test_referencing.py  test_schemas.py  test_summarizer.py  test_tool_executors.py  test_validation_pipeline.py
web_client/: index.html
web_client/css/: styles.css
web_client/js/: app.js  chat-manager.js  ui-controller.js  websocket-client.js
(+67 files in other folders)
